Fix alignment issue for ActionButton
It's still different but not nearly as different.

--- a/web/components/action-buttons/ActionButton/ActionButton.module.scss
+++ b/web/components/action-buttons/ActionButton/ActionButton.module.scss
@@ -4,8 +4,6 @@
   .icon {
     max-height: 18px;
     height: 90%;
-    margin-right: 5px;
-    margin-left: -3px;
-    margin-bottom: 1%;
+		vertical-align: middle;
   }
 }
